feat: aggregate items in get list api
