# docs/swagger.yaml
@@ -19,7 +19,20 @@ definitions:
         type: string
       name:
         type: string
-      updated_at:
+      userId:
+        type: integer
+    type: object
+  appModel.ListWithItems:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: string
+      items:
+        items:
+          $ref: '#/definitions/appModel.Item'
+        type: array
+      name:
         type: string
       userId:
         type: integer
@@ -219,7 +232,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/appModel.List'
+            $ref: '#/definitions/appModel.ListWithItems'
         "401":
           description: Unauthorized
           schema:
