# internal/app/handlers/list_handler.go
@@ -50,7 +50,7 @@ func (app *ListHandler) Create(c *gin.Context) {
 // @Param id path string true "List ID"
 // @Produce json
 // @Security BearerAuth
-// @Success 200 {object} appModel.List
+// @Success 200 {object} appModel.ListWithItems
 // @Failure 401 {object} commonModels.ErrorResponse
 // @Failure 404 {object} commonModels.ErrorResponse
 // @Router /list/{id} [get]
